objects/ffr__XXXTransaction__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__CreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>ffr__XXXCreditNote__c</referenceTo>
        <relationshipLabel>XXX Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__DocumentDescription__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__EncryptField__c</fullName>
        <label>Encrypt Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__InvoiceHyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ffr__Invoice__c, &quot;Invoice Page&quot;)</formula>
        <label>Invoice Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>ffr__XXXInvoice__c</referenceTo>
        <relationshipLabel>XXX Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>ffr__XXXPeriod__c</referenceTo>
        <relationshipLabel>XXX Transaction Periods</relationshipLabel>
        <relationshipName>TransactionPeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionCurrency__c</fullName>
        <label>Transaction Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionDescription__c</fullName>
        <label>Transaction Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionDueDate__c</fullName>
        <label>Transaction Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionTotal__c</fullName>
        <label>Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__gla__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>ffr__XXXGLA__c</referenceTo>
        <relationshipLabel>XXX Transactions GLAs</relationshipLabel>
        <relationshipName>TransactionsGLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>XXX Transaction</label>
    <nameField>
        <displayFormat>XTRN{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>